# lidar_object_follower

./: CMakeLists.txt  README.md  package.xml
launch/: object-follower.launch.py  object_follower.launch.py
params/: myrobot.yaml
src/: follower-node.cpp  follower_node.cpp
urdf/: myrobot.gazebo  myrobot.xacro
worlds/: world.sdf
